# Gross-To-Net

./: README.md  output_with_net_salary.xlsx  pyproject.toml  run_and_open.py
TEST/: lenhtest.py  test_gross_to_net2.xlsx
src/api/: main.py
src/api/routers/: net_ease.py
src/core/net_ease/: constants.py  controller.py  entities.py  services.py
