[tool.poetry]
name = "gross-to-net-api"
version = "0.1.0"
description = "A FastAPI service to calculate Net salary from Gross"
authors = ["Annerose <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]